better db example

--- a/project/env.example
+++ b/project/env.example
@@ -1,6 +1,6 @@
-
-POSTGRES_PASSWORD=mysecretpass
-POSTGRES_USER=postgresuser
+PGUSER=mydbuser
+PGPASSWORD=mydbpassword
+DATABASE_URL=postgres://mydbuser:mydbpassword@localhost/asylum
 
 ADMIN_URL=
 DJANGO_SETTINGS_MODULE=config.settings.production
