--- a/project/env.example
+++ b/project/env.example
@@ -1,6 +1,9 @@
 PGUSER=mydbuser
 PGPASSWORD=mydbpassword
 DATABASE_URL=postgres://mydbuser:mydbpassword@localhost/asylum
+MEMBERAPPLICATION_CALLBACKS_HANDLER=examples.handlers.ApplicationHandler
+MEMBER_CALLBACKS_HANDLER=examples.handlers.MemberHandler
+
 
 ADMIN_URL=
 DJANGO_SETTINGS_MODULE=config.settings.production
