Use configuration for enabling Nordea uploads

--- a/project/env.example
+++ b/project/env.example
@@ -11,3 +11,4 @@ DJANGO_SECRET_KEY=CHANGEME!!!6gihlkt1lhmkpf8^n_%4m0)zljqgg=!bh&uaq*5qogl8^-wuay
 DJANGO_ALLOWED_HOSTS=.example.com
 DJANGO_SERVER_EMAIL=
 DJANGO_SECURE_SSL_REDIRECT=False
+NORDEA_UPLOAD_ENABLED=True
