Callback system for transaction importing and stub example/test callback, refs #61
Also the AbstractTransaction class, fixes #60

--- a/project/env.example
+++ b/project/env.example
@@ -3,7 +3,7 @@ PGPASSWORD=mydbpassword
 DATABASE_URL=postgres://mydbuser:mydbpassword@localhost/asylum
 MEMBERAPPLICATION_CALLBACKS_HANDLER=examples.handlers.ApplicationHandler
 MEMBER_CALLBACKS_HANDLER=examples.handlers.MemberHandler
-
+TRANSACTION_CALLBACKS_HANDLER=examples.handlers.TransactionHandler
 
 ADMIN_URL=
 DJANGO_SETTINGS_MODULE=config.settings.production
