--- a/project/setup.cfg
+++ b/project/setup.cfg
@@ -5,3 +5,7 @@ exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules
 [pep8]
 max-line-length = 120
 exclude=.tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules
+
+[pytest]
+DJANGO_SETTINGS_MODULE=config.settings.local
+norecursedirs=.git node_modules requirements config
