Callbacks system for transactions created from recurring ones
Ref #149

--- a/project/env.example
+++ b/project/env.example
@@ -11,3 +11,4 @@ DJANGO_SERVER_EMAIL=
 DJANGO_SECURE_SSL_REDIRECT=False
 NORDEA_UPLOAD_ENABLED=True
 ORGANIZATION_NAME="Your great hacklab ry"
+RECURRINGTRANSACTIONS_CALLBACKS_HANDLER=examples.handlers.RecurringTransactionsHolviHandler
