Add automatical membership fee generation to approval

--- a/project/env.example
+++ b/project/env.example
@@ -12,3 +12,5 @@ DJANGO_SECURE_SSL_REDIRECT=False
 NORDEA_UPLOAD_ENABLED=True
 ORGANIZATION_NAME="Your great hacklab ry"
 RECURRINGTRANSACTIONS_CALLBACKS_HANDLER=examples.handlers.RecurringTransactionsHolviHandler
+MEMBEREXAMPLE_MEMBERSHIP_FEE=28.0
+MEMBEREXAMPLE_MEMBERSHIP_TAG_PK=1
