--- a/project/env.example
+++ b/project/env.example
@@ -12,3 +12,4 @@ DJANGO_ALLOWED_HOSTS=.example.com
 DJANGO_SERVER_EMAIL=
 DJANGO_SECURE_SSL_REDIRECT=False
 NORDEA_UPLOAD_ENABLED=True
+ORGANIZATION_NAME="Your great hacklab ry"
