Add connection configuration and API access shorthands

--- a/project/env.example
+++ b/project/env.example
@@ -15,3 +15,6 @@ RECURRINGTRANSACTIONS_CALLBACKS_HANDLER=examples.handlers.RecurringTransactionsH
 MEMBEREXAMPLE_MEMBERSHIP_FEE=28.0
 MEMBEREXAMPLE_MEMBERSHIP_TAG_PK=1
 MEMBEREXAMPLE_MAILMAN_SUBSCRIBE="yourlist-request@yourcity.hacklab.fi"
+
+HOLVI_POOL=yourpoolid
+HOLVI_APIKEY=yourapikey
