--- a/project/env.example
+++ b/project/env.example
@@ -5,6 +5,7 @@ TRANSACTION_CALLBACKS_HANDLER=examples.handlers.TransactionHandler
 
 DJANGO_ADMIN_URL=admin/
 DJANGO_SETTINGS_MODULE=config.settings.production
+DJANGO_LOG_LEVEL=INFO
 DJANGO_SECRET_KEY=CHANGEME!!!6gihlkt1lhmkpf8^n_%4m0)zljqgg=!bh&uaq*5qogl8^-wuay
 DJANGO_ALLOWED_HOSTS=.example.com
 DJANGO_SERVER_EMAIL=
@@ -18,3 +19,6 @@ MEMBEREXAMPLE_MAILMAN_SUBSCRIBE="yourlist-request@yourcity.hacklab.fi"
 
 HOLVI_POOL=yourpoolid
 HOLVI_APIKEY=yourapikey
+
+USE_SENTRY=True
+DJANGO_SENTRY_DSN=http://example.com/
